--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <body>
     <h1>The Learn Enough Story</h1>
     <p>
+       <a href="http://twitter.com/learnenough" target="_blank"
+       style="text-decoration: none;">
+         <img src="images/Tahses_Logo.jpg" alt ="Tahses Logo">
+       </a>
+       You should follow Learn Enough on Twitter
+       <a href="http://twitter.com/learnenough" target="_blank">here</a>.
+     </p>
+    <p>
       Learn Enough to Be Dangerous is a leader in the movement to teach
       <em>technical sophistication</em>, the seemingly magical ability to take
       command of your computer and get it to do your bidding. This includes
