--- a/index.html
+++ b/index.html
@@ -5,31 +5,33 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div>
-      <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
+    <div style="text-align: right; text-decoration: none">
+      <a href="index.html" style="text-decoration: none">Home</a>
+      <a href="tags.html" style="margin: 0 0 0 10px;text-decoration: none">HTML Tags</a>
+      <a href="moby_dick.html" style="margin-left: 10px;text-decoration: none">Moby Dick</a>
     </div>
 
     <h1>The Learn Enough Story</h1>
     <p>
        <a href="http://twitter.com/learnenough" target="_blank"
        style="text-decoration: none;">
-         <img src="images/Tahses_Logo.jpg" alt ="Tahses Logo">
+         <img src="images/Tahses_Logo.jpg" alt ="Tahses Logo" height ="50px">
        </a>
-       You should follow Learn Enough on Twitter
-       <a href="http://twitter.com/learnenough" target="_blank">here</a>.
-     </p>
-    <p>
-      Learn Enough to Be Dangerous is a leader in the movement to teach
-      <em>technical sophistication</em>, the seemingly magical ability to take
-      command of your computer and get it to do your bidding. This includes
-      everything from command lines and coding to guessing keyboard shortcuts,
-      Googling error messages, and knowing when to just reboot the darn thing.
-      We believe there are at <strong>least a billion people</strong> who can benefit from
-      learning technical sophistication, probably more. To join our
-      movement, <a href="http://learnenough.com/email">sign up for our official email list</a> now.
     </p>
+    <TAG>Quotations</TAG>
+    <p>
+      In addition to hosting most of the world's supply of kitten videos, the
+      Web is also full of inspiring quotes, perhaps none more so than this one:
+    </p>
+
+    <blockquote style="padding: 2px 20px; background: #FILL_IN;">
+      <p>
+        <em>Don't believe every quote you read on the Internet.</em>
+        <br>
+        —Abraham Lincoln
+      </p>
+    </blockquote>
+
     <img src="images/kitten.jpg" alt="An adorable kitten">
      <h2>Background</h2>
      <p>
